feat: crud methods (#1)
* feat: crud methods

* feat: add geojson geometry polygon

* chore: change data return of create method

* feat: add docker_run, add swagger configuration port

* fix: add newline at EOL

* fix: swagger reposnses schemas

* fix: eslint, yml, options

* feat: add search by taskId and by expiration date

* fix: new line at EOL of .github yml files

* fix: new line at EOL of .github yml files

* fix: remove date type from user id in swagger yml

* feat: multiple delete by task IDs, change swagger, less than in expiration date

* refactor: delete method to DAL, update swagger yml

* fix: new line at EOL

* fix: eslint
