# src/routers/statuses.ts
@@ -1,16 +1,17 @@
 import { Router } from 'express';
 import { container } from 'tsyringe';
 import { validate } from 'openapi-validator-middleware';
-import { ImagesController } from '../controllers/statusesController';
+import { StatusController } from '../controllers/statusesController';
 
 const statusRouter = Router();
-const controller = container.resolve(ImagesController);
+const controller = container.resolve(StatusController);
 
-// imagesRouter.post('/', validate, controller.create.bind(controller));
-// imagesRouter.put('/', validate, controller.update.bind(controller));
-statusRouter.get('/:id', validate, controller.get.bind(controller));
-// imagesRouter.delete('/:id', validate, controller.delete.bind(controller));
-// imagesRouter.get('/exists/:id', validate, controller.exists.bind(controller));
-// imagesRouter.post('/search', validate, controller.search.bind(controller));
+statusRouter.get('/', validate, controller.getAll.bind(controller));
+statusRouter.post('/', validate, controller.create.bind(controller));
+statusRouter.get('/:taskId', validate, controller.get.bind(controller));
+statusRouter.put('/', validate, controller.update.bind(controller));
+statusRouter.post('/delete', validate, controller.delete.bind(controller));
+statusRouter.get('/user/:userId', validate, controller.getStatusesByUserId.bind(controller));
+statusRouter.get('/expired/:date', validate, controller.getStatusesBeforeExpiredDate.bind(controller));
 
 export { statusRouter as StatusRouter };
